[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "url_reduction"
version = "0.1.0"
description = "Сервис сокращения URL на FastAPI с SQLite"
authors = [
    { name="Дмитрий", email="your-email@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0"
]

[tool.setuptools.packages.find]
where = ["."]